# tic-tac-toe-game

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  requirements.txt  st_main.py
configs/: game-cfg.json  q-learn-cfg.json
configs/td-learn-cfgs/: td-learn-cfg-3.json  td-learn-cfg.json
configs/td-learn-cfs/: td-learn-cfg-2.json
test/: test_main.py
test/test_cases/: __init__.py  q_learn_player_test.py  random_player_tests.py  test_game.py
tic_tac_toe/: __main__.py  constants.py  game.py  play_terminal.py  schemas.py
tic_tac_toe/players/: __init__.py  base.py  console.py  e_sarsa.py  learn_types.py  learned_base.py  q_learn.py  random.py  schemas.py  td_base.py
tic_tac_toe/training/: __main__.py  schemas.py  train_agent.py
ttt_visualize/: forms.py  load_data.py  plots.py
